clang/test/BSC/Negative/Trait/GenericTrait/impl_trait1/impl_trait1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> { // expected-note {{declared here}}
  T foo(This* this, int a);
};

typedef struct S{
  int x;
}MyS;

int struct S::foo(struct S* this, int a) { 
  return this->x + a;
}

_Impl _Trait F for MyS; // expected-error {{template 'F' cannot be referenced with a _Trait specifier}}